tests/ui/lint/snapshots/identical_match_arms_literals.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Identical match arms
   ╭─[test.lis:5:3]
 4 │   let b = 2;
 5 │   match n {
   ·   ──┬──
   ·     ╰── every arm is identical
 6 │     0 => a + b,
   ╰────
  help: All `match` arms resolve to the same value. Did you mean for the arms to differ? · code: [lint.identical_match_arms]
