tests/ui/lint/snapshots/identical_match_arms_same_bool.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Identical match arms
   ╭─[test.lis:4:11]
 3 │   let o: Option<int> = Some(1)
 4 │   let _ = match o {
   ·           ──┬──
   ·             ╰── every arm is identical
 5 │     Some(_) => true,
   ╰────
  help: All `match` arms resolve to the same value. Did you mean for the arms to differ? · code: [lint.identical_match_arms]
