tests/ui/lint/snapshots/impossible_comparison_float_operand_integer_literals.snap
---
source: tests/ui/lint/mod.rs
---
  [error] Impossible comparison
   ╭─[test.lis:4:11]
 3 │   let f: float64 = 1.0
 4 │   let _ = f < 5 && f > 10
   ·           ───────┬───────
   ·                  ╰── always `false`
 5 │ }
   ╰────
  help: No value satisfies both sides, so this `&&` is always `false`. Check the bounds, or did you mean `||`? · code: [infer.impossible_comparison]
