tests/ui/lint/snapshots/impossible_comparison_negative_bounds.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Impossible comparison
   ╭─[test.lis:4:11]
 3 │   let x = 0;
 4 │   let _ = x <= -3 && x >= 0
   ·           ────────┬────────
   ·                   ╰── always `false`
 5 │ }
   ╰────
  help: No value satisfies both sides, so this `&&` is always `false`. Check the bounds, or did you mean `||`? · code: [infer.impossible_comparison]
